--- a/NorthQStandalone/build.gradle
+++ b/NorthQStandalone/build.gradle
@@ -25,10 +25,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter")
-    compile("org.springframework:spring-web")
     compile("com.fasterxml.jackson.core:jackson-databind")
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile group: 'org.json', name: 'json', version: '20090211'
     testCompile("junit:junit")
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
 }
