--- a/ui/org.openhab.ui.automation/pom.xml
+++ b/ui/org.openhab.ui.automation/pom.xml
@@ -59,13 +59,13 @@
           </execution>
 
           <execution>
-			<id>npm run-script build</id>
+			<id>npm run-script prod</id>
 			<phase>prepare-package</phase>
 			<goals>
 				<goal>npm</goal>
 			</goals>
 			<configuration>
-				<arguments>run-script build</arguments>
+				<arguments>run-script prod</arguments>
 			</configuration>
 		  </execution>
 
