--- a/misc/org.eclipse.smarthome.automation.module.extension/pom.xml
+++ b/misc/org.eclipse.smarthome.automation.module.extension/pom.xml
@@ -1,111 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.openhab.misc</groupId>
-		<artifactId>pom</artifactId>
-		<version>2.2.0-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>org.openhab.misc</groupId>
+        <artifactId>pom</artifactId>
+        <version>2.2.0-SNAPSHOT</version>
+    </parent>
 
-	<artifactId>org.openhab.automation.module.extension</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+    <artifactId>org.openhab.automation.module.extension</artifactId>
+    <version>2.2.0-SNAPSHOT</version>
 
-	<name>Module extension</name>
-	<packaging>eclipse-plugin</packaging>
-
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>3.0.0</version>
-			</extension>
-		</extensions>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>wagon-maven-plugin</artifactId>
-					<version>1.0</version>
-					<configuration>
-						<serverId>ec2-node</serverId>
-						<url>${server-url}</url>
-						<fromFile>${basedir}/target/${project.build.finalName}.jar</fromFile>
-						<toFile>/home/ubuntu/${project.build.finalName}.jar</toFile>
-						<commands>sudo mv /home/ubuntu/${project.build.finalName}.jar /usr/share/openhab2/addons/${project.build.finalName}.jar; sudo systemctl restart openhab2.service</commands>
-						<displayCommandOutputs>true</displayCommandOutputs>
-					</configuration>
-					<executions>
-						<execution>
-							<id>upload-puppet-module</id>
-							<phase>none</phase>
-							<goals>
-								<goal>upload-single</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>openHAB install</id>
-							<phase>none</phase>
-							<goals>
-								<goal>sshexec</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<lifecycleMappings>
-								<lifecycleMapping>
-									<packagingType>eclipse-plugin</packagingType>
-									<pluginExecutions>
-										<pluginExecution>
-											<pluginExecutionFilter>
-												<groupId>org.eclipse.tycho</groupId>
-												<artifactId>tycho-maven-plugin</artifactId>
-												<versionRange>[0.12.0,)</versionRange>
-												<goals>
-													<goal>filter-sources</goal>
-												</goals>
-												<parameters>
-													<compilerId>groovy-eclipse-compiler</compilerId>
-												</parameters>
-											</pluginExecutionFilter>
-											<action>
-												<configurator>
-													<id>org.codehaus.groovy.m2eclipse.configurator</id>
-												</configurator>
-											</action>
-											<comment>
-												source: extension(org.codehaus.groovy.m2eclipse_2.9.2.xx-201710091624-e45)
-											</comment>
-										</pluginExecution>
-									</pluginExecutions>
-								</lifecycleMapping>
-							</lifecycleMappings>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.eclipse.smarthome</groupId>
-			<artifactId>org.eclipse.smarthome.feature.runtime.automation</artifactId>
-			<version>0.9.0.b6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openhab.core</groupId>
-			<artifactId>org.openhab.core</artifactId>
-			<version>${ohc.version}</version>
-		</dependency>
-	</dependencies>
-
+    <name>Module extension</name>
+    <packaging>eclipse-plugin</packaging>
+  
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>3.0.0</version>
+            </extension>
+        </extensions>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>wagon-maven-plugin</artifactId>
+                    <version>1.0</version>
+                    <configuration>
+                        <serverId>ec2-node</serverId>
+                        <url>${server-url}</url>
+                        <fromFile>${basedir}/target/${project.build.finalName}.jar</fromFile>
+                        <toFile>/home/ubuntu/${project.build.finalName}.jar</toFile>
+                        <commands>sudo mv /home/ubuntu/${project.build.finalName}.jar /usr/share/openhab2/addons/${project.build.finalName}.jar; sudo systemctl restart openhab2.service</commands>
+                        <displayCommandOutputs>true</displayCommandOutputs>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>upload-puppet-module</id>
+                            <phase>none</phase>
+                            <goals>
+                                <goal>upload-single</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>openHAB install</id>
+                            <phase>none</phase>
+                            <goals>
+                                <goal>sshexec</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
