--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,12 @@ hs_err_pid*
 
 # End of https://www.gitignore.io/api/java,intellij
 org.openhab.binding.northqbinding/target/
+/binding/*
+!/binding/org.openhab.binding.northqbinding/
+/io/
+/ui/*
+!/ui/org.openhab.ui.automation
+/voice/
+archetype-settings.xml
+pom.xml
+README.md
