--- a/binding/org.openhab.binding.northqbinding.test/pom.xml
+++ b/binding/org.openhab.binding.northqbinding.test/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -9,18 +10,10 @@
 		<version>2.2.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.openhab.binding</groupId>
 	<artifactId>org.openhab.binding.northqbinding.test</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
-	<packaging>eclipse-test-plugin</packaging>
-
+	
 	<name>NorthQBinding Binding Tests</name>
-
-	<properties>
-		<bundle.symbolicName>org.openhab.binding.northqbinding.test</bundle.symbolicName>
-		<bundle.namespace>org.openhab.binding.northqbinding</bundle.namespace>
-	</properties>
-
+	<packaging>eclipse-test-plugin</packaging>
 
 	<build>
 		<plugins>
@@ -63,8 +56,35 @@
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
 				<configuration>
+					<defaultStartLevel>
+						<level>4</level>
+						<autoStart>true</autoStart>
+					</defaultStartLevel>
 					<dependencies>
+						<!-- Equinox Bundles -->
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.equinox.ds</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.equinox.event</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.equinox.util</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.osgi.services</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<!-- Required Bundles to enable LOGGING -->
 						<dependency>
 							<type>eclipse-plugin</type>
 							<artifactId>ch.qos.logback.classic</artifactId>
@@ -78,6 +98,27 @@
 						<dependency>
 							<type>eclipse-plugin</type>
 							<artifactId>ch.qos.logback.slf4j</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<!-- Smarthome core bundles -->
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.config.xml</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.core.thing</artifactId>
+							<version>0.8.0.20160302</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.core.thing.xml</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.core.binding.xml</artifactId>
 							<version>0.0.0</version>
 						</dependency>
 					</dependencies>
