--- a/binding/org.openhab.binding.northqbinding.test/build.properties
+++ b/binding/org.openhab.binding.northqbinding.test/build.properties
@@ -2,4 +2,5 @@ source.. = src/test/java/
 output.. = target/test-classes
 bin.includes = META-INF/,\
                .,\
-               about.html
+               about.html,\
+               
