--- a/misc/pom.xml
+++ b/misc/pom.xml
@@ -17,5 +17,6 @@
 
   <modules>
 	<module>org.eclipse.smarthome.automation.module.extension</module>
+	<module>org.eclipse.smarthome.automation.module.extension.test</module>
   </modules>
 </project>
