--- a/misc/org.openhab.automation.module.extension.test/pom.xml
+++ b/misc/org.openhab.automation.module.extension.test/pom.xml
@@ -100,6 +100,12 @@
 							<artifactId>ch.qos.logback.slf4j</artifactId>
 							<version>0.0.0</version>
 						</dependency>
+						<!-- Required Bundles to for HTTP service -->
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.jetty.client</artifactId>
+							<version>0.0.0</version>
+						</dependency>
 						<!-- Smarthome core bundles -->
 						<dependency>
 							<type>eclipse-plugin</type>
@@ -121,6 +127,62 @@
 							<artifactId>org.eclipse.smarthome.core.binding.xml</artifactId>
 							<version>0.0.0</version>
 						</dependency>
+						<!-- Smarthome automation bundles -->
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.api</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.commands</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.core</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.module.core</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.module.script.defaultscope</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.module.script.rulesupport</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.module.script</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.module.timer</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.parser.gson</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.eclipse.smarthome.automation.providers</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+						<dependency>
+							<type>eclipse-plugin</type>
+							<artifactId>org.jupnp</artifactId>
+							<version>0.0.0</version>
+						</dependency>
 					</dependencies>
 					<bundleStartLevel>
 						<bundle>
@@ -131,6 +193,11 @@
 						<bundle>
 							<id>org.eclipse.equinox.event</id>
 							<level>2</level>
+							<autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+							<id>org.eclipse.jetty.client</id>
+							<level>3</level>
 							<autoStart>true</autoStart>
 						</bundle>
 						<bundle>
@@ -157,6 +224,36 @@
 							<id>org.eclipse.smarthome.core.binding.xml</id>
 							<level>4</level>
 							<autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.api</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.core</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.commands</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.module.core</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.parser.gson</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
+						</bundle>
+						<bundle>
+						  <id>org.eclipse.smarthome.automation.providers</id>
+						  <level>1</level>
+						  <autoStart>true</autoStart>
 						</bundle>
 					</bundleStartLevel>
 				</configuration>
