--- a/binding/org.openhab.binding.northq/.project
+++ b/binding/org.openhab.binding.northq/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.openhab.binding.northqbinding</name>
+	<name>org.openhab.binding.northq</name>
 	<comment></comment>
 	<projects>
 	</projects>
