--- a/binding/org.openhab.binding.northq/pom.xml
+++ b/binding/org.openhab.binding.northq/pom.xml
@@ -10,10 +10,10 @@
 		<version>2.2.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>org.openhab.binding.northqbinding</artifactId>
+	<artifactId>org.openhab.binding.northq</artifactId>
 	<version>2.2.0-SNAPSHOT</version>
 
-	<name>NorthQBinding Binding</name>
+	<name>NorthQ Binding</name>
 	<packaging>eclipse-plugin</packaging>
 	
 	  <build>
